--- a/Resources/views/en/termsOfUse.html.twig
+++ b/Resources/views/en/termsOfUse.html.twig
@@ -1,6 +1,6 @@
 <h2>1. Acceptance of terms of use and amendments</h2>
 <p>
-    Each time you visit, use or cause access to this site, you agree to be bound by these 'Terms of use', as amended from time to time with or without notice to you. In addition, your usage of services on this site or accessed via this site will be subject to any rules or guidelines applicable to those services, and they will be incorporated by reference within these 'Terms of use'. Please read the site's {{ zikulalegalmodule_inlineLink(policy='privacyPolicy') }}, which is also incorporated within these 'Terms of use' by reference.
+    Each time you visit, use or cause access to this site, you agree to be bound by these 'Terms of use', as amended from time to time with or without notice to you. In addition, your usage of services on this site or accessed via this site will be subject to any rules or guidelines applicable to those services, and they will be incorporated by reference within these 'Terms of use'. Please read the site's {{ zikulalegalmodule_inlineLink('privacyPolicy') }}, which is also incorporated within these 'Terms of use' by reference.
 </p>
 
 <h2>2. The site operator's service</h2>
@@ -9,12 +9,12 @@
 </p>
 <h2>3. Your responsibilities and registration obligations</h2>
 <p>
-    In order to use this site or certain parts of it, you may be required to <a href="{{ path('zikulausersmodule_registration_register') }}" title="Registration page">register for a user account</a> on this site; in this case, you agree to provide truthful information when requested, and - if a minimum age is required for eligibility for a user account - you undertake that you are of at least the required age. By registering for a user account, you explicitly agree to this site's 'Terms of use' and {{ zikulalegalmodule_inlineLink(policy='privacyPolicy') }}, including any amendments made by the site operator that are published herein.
+    In order to use this site or certain parts of it, you may be required to <a href="{{ path('zikulausersmodule_registration_register') }}" title="Registration page">register for a user account</a> on this site; in this case, you agree to provide truthful information when requested, and - if a minimum age is required for eligibility for a user account - you undertake that you are of at least the required age. By registering for a user account, you explicitly agree to this site's 'Terms of use' and {{ zikulalegalmodule_inlineLink('privacyPolicy') }}, including any amendments made by the site operator that are published herein.
 </p>
 
 <h2>4. Privacy policy</h2>
 <p>
-    Registration data and other personally identifiable information that the site may collect is subject to the terms of the site operator's {{ zikulalegalmodule_inlineLink(policy='privacyPolicy') }}.
+    Registration data and other personally identifiable information that the site may collect is subject to the terms of the site operator's {{ zikulalegalmodule_inlineLink('privacyPolicy') }}.
 </p>
 <h2>5. Registration and password</h2>
 <p>
@@ -65,7 +65,7 @@
 </ol>
 
 <p>
-    Failure to comply with any of the clauses of this section 6 of these 'Terms of use' will be considered to be just cause for immediate closure of your user account, and may render you liable to legal action. For more information about user account closure, please refer to the site's {{ zikulalegalmodule_inlineLink(policy='privacyPolicy') }}.
+    Failure to comply with any of the clauses of this section 6 of these 'Terms of use' will be considered to be just cause for immediate closure of your user account, and may render you liable to legal action. For more information about user account closure, please refer to the site's {{ zikulalegalmodule_inlineLink('privacyPolicy') }}.
 </p>
 <p>
     If you become aware of any infringement of these 'Terms of use' by a registered user of this site, please <a href="mailto:{{ getModVar('ZConfig', 'adminmail')|e('html_attr')|protectMail() }}" title="Send mail to the site administrator">e-mail the site administrator</a>.
