--- a/Resources/views/UsersUI/editRegistration.html.twig
+++ b/Resources/views/UsersUI/editRegistration.html.twig
@@ -1,5 +1,5 @@
 <fieldset>
-    <legend>{{ __('Site policies') }}</legend>
+    <legend>{{ __('Site policies', 'zikulalegalmodule') }}</legend>
     <input type="hidden" id="acceptpolicies_csrftoken" name="acceptpolicies_csrftoken" value="{{ csrfToken }}" />
     <input type="hidden" id="acceptpolicies_uid" name="acceptedpolicies_uid" value="" />
     {{ include('@ZikulaLegalModule/Include/acceptPolicies.html.twig') }}
