--- a/Resources/views/User/policyNotActive.html.twig
+++ b/Resources/views/User/policyNotActive.html.twig
@@ -1,3 +1,2 @@
-{% set templateTitle = __('Policy not available') %}
-{{ include('@ZikulaLegalModule/User/menu.html.twig') }}
+{{ moduleHeader('user', __('Policy not available'), '', true, true) }}
 <p>{{ __('The selected policy is not available.') }}</p>
