--- a/Resources/views/User/accessibilityStatement.html.twig
+++ b/Resources/views/User/accessibilityStatement.html.twig
@@ -1,3 +1,2 @@
-{% set templateTitle = __f('Accessibility statement for %s', { '%s': getModVar('ZConfig', 'sitename') }) %}
-{{ include('@ZikulaLegalModule/User/menu.html.twig') }}
-{{ include('@ZikulaLegalModule/' ~ languageCode ~ '/accessibilityStatement.html.twig') }}
+{{ moduleHeader('user', __f('Accessibility statement for %s', { '%s': pagevars.title }), '', true, true) }}
+{{ include('@ZikulaLegalModule/' ~ app.request.locale ~ '/accessibilityStatement.html.twig') }}
