--- a/Resources/views/User/termsOfUse.html.twig
+++ b/Resources/views/User/termsOfUse.html.twig
@@ -1,3 +1,2 @@
-{% set templateTitle = __f('Terms of use for %s', { '%s': getModVar('ZConfig', 'sitename') }) %}
-{{ include('@ZikulaLegalModule/User/menu.html.twig') }}
-{{ include('@ZikulaLegalModule/' ~ languageCode ~ '/termsOfUse.html.twig') }}
+{{ moduleHeader('user', __f('Terms of use for %s', { '%s': pagevars.title }), '', true, true) }}
+{{ include('@ZikulaLegalModule/' ~ app.request.locale ~ '/termsOfUse.html.twig') }}
