--- a/Resources/public/js/jquery.cookiebar/jquery.cookiebar.css
+++ b/Resources/public/js/jquery.cookiebar/jquery.cookiebar.css
@@ -1,4 +1,4 @@
-#cookie-bar {background:#111111; height:24px; line-height:24px; color:#eeeeee; text-align:center; padding:3px 0;}
+#cookie-bar {background:#111111; height:auto; line-height:24px; color:#eeeeee; text-align:center; padding:3px 0;}
 #cookie-bar.fixed {position:fixed; top:0; left:0; width:100%;}
 #cookie-bar.fixed.bottom {bottom:0; top:auto;}
 #cookie-bar p {margin:0; padding:0;}
