--- a/Resources/views/Include/acceptPolicies.html.twig
+++ b/Resources/views/Include/acceptPolicies.html.twig
@@ -1,54 +1,42 @@
-<div class="form-group{% if fieldErrors.policies|default %} has-error{% endif %}">
-    <div class="col-sm-3 control-label required">
-        <label for="acceptpolicies_termsofuse">{{ __('Policies', 'zikulalegalmodule') }}</label>
-    </div>
-    <div class="col-sm-9">
-        <div class="checkbox">
-            <input type="checkbox" id="acceptpolicies_policies" name="acceptedpolicies_policies" required="required"{% if acceptedPolicies %} checked="checked"{% endif %} value="1" />
-            <em class="help-text">{{ __('Check this box to indicate your acceptance of this site\'s policies.', 'zikulalegalmodule') }}</em>
-        </div>
-        <p id="acceptpolicies_policies_info">{{ __('Please click on the following links to read the corresponding documents.', 'zikulalegalmodule') }}</p>
-        <ul>
-{% if activePolicies.termsOfUse|default and not originalAcceptedPolicies.termsOfUse|default %}
-    {% set policyUrl = getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_TERMS_URL')) %}
-    {% if policyUrl == '' %}
-        {% set policyUrl = path('zikulalegalmodule_user_termsofuse') %}
+<div class="col-sm-offset-3 col-sm-9">
+    <p id="acceptpolicies_policies_info">{{ __('Please click on the following links to read the corresponding documents.', 'zikulalegalmodule') }}</p>
+    <ul>
+    {% if activePolicies.termsOfUse|default and not acceptedPolicies.termsOfUse|default %}
+        {% set policyUrl = getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_TERMS_URL')) %}
+        {% if policyUrl == '' %}
+            {% set policyUrl = path('zikulalegalmodule_user_termsofuse') %}
+        {% endif %}
+        {% set policyName = __('Terms of use', 'zikulalegalmodule') %}
+        <li><a class="policy-link" data-toggle="modal" data-target="#modal-terms-of-use" href="{{ policyUrl }}">{{ policyName }}</a></li>
     {% endif %}
-    {% set policyName = __('Terms of use', 'zikulalegalmodule') %}
-    <li><a class="policy-link" data-toggle="modal" data-target="#modal-terms-of-use" href="{{ policyUrl }}">{{ policyName }}</a></li>
-{% endif %}
-{% if activePolicies.privacyPolicy|default and not originalAcceptedPolicies.privacyPolicy|default %}
-    {% set policyUrl = getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_PRIVACY_URL')) %}
-    {% if policyUrl == '' %}
-        {% set policyUrl = path('zikulalegalmodule_user_privacypolicy') %}
+    {% if activePolicies.privacyPolicy|default and not acceptedPolicies.privacyPolicy|default %}
+        {% set policyUrl = getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_PRIVACY_URL')) %}
+        {% if policyUrl == '' %}
+            {% set policyUrl = path('zikulalegalmodule_user_privacypolicy') %}
+        {% endif %}
+        {% set policyName = __('Privacy policy', 'zikulalegalmodule') %}
+        <li><a class="policy-link" data-toggle="modal" data-target="#modal-privacy-policy" href="{{ policyUrl }}">{{ policyName }}</a></li>
     {% endif %}
-    {% set policyName = __('Privacy policy', 'zikulalegalmodule') %}
-    <li><a class="policy-link" data-toggle="modal" data-target="#modal-privacy-policy" href="{{ policyUrl }}">{{ policyName }}</a></li>
-{% endif %}
-{% if activePolicies.agePolicy|default and not originalAcceptedPolicies.agePolicy|default %}
-    <li>{{ __f('You need to be %s years of age or older, in accordance with our minimum age requirement.', { '%s': getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_MINIMUM_AGE'), 13) }, 'zikulalegalmodule') }}</li>
-{% endif %}
-{% if activePolicies.tradeConditions|default and not originalAcceptedPolicies.tradeConditions|default %}
-    {% set policyUrl = getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_TRADECONDITIONS_URL')) %}
-    {% if policyUrl == '' %}
-        {% set policyUrl = path('zikulalegalmodule_user_tradeconditions') %}
+    {% if activePolicies.agePolicy|default and not acceptedPolicies.agePolicy|default %}
+        <li>{{ __f('You need to be %s years of age or older, in accordance with our minimum age requirement.', { '%s': getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_MINIMUM_AGE'), 13) }, 'zikulalegalmodule') }}</li>
     {% endif %}
-    {% set policyName = __('General terms and conditions of trade', 'zikulalegalmodule') %}
-    <li><a class="policy-link" data-toggle="modal" data-target="#modal-general-terms-and-conditions-of-trade" href="{{ policyUrl }}">{{ policyName }}</a></li>
-{% endif %}
-{% if activePolicies.cancellationRightPolicy|default and not originalAcceptedPolicies.cancellationRightPolicy|default %}
-    {% set policyUrl = getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_CANCELLATIONRIGHTPOLICY_URL')) %}
-    {% if policyUrl == '' %}
-        {% set policyUrl = path('zikulalegalmodule_user_cancellationrightpolicy') %}
+    {% if activePolicies.tradeConditions|default and not acceptedPolicies.tradeConditions|default %}
+        {% set policyUrl = getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_TRADECONDITIONS_URL')) %}
+        {% if policyUrl == '' %}
+            {% set policyUrl = path('zikulalegalmodule_user_tradeconditions') %}
+        {% endif %}
+        {% set policyName = __('General terms and conditions of trade', 'zikulalegalmodule') %}
+        <li><a class="policy-link" data-toggle="modal" data-target="#modal-general-terms-and-conditions-of-trade" href="{{ policyUrl }}">{{ policyName }}</a></li>
     {% endif %}
-    {% set policyName = __('Cancellation right policy', 'zikulalegalmodule') %}
-    <li><a class="policy-link" data-toggle="modal" data-target="#modal-cancellation-right-policy" href="{{ policyUrl }}">{{ policyName }}</a></li>
-{% endif %}
-        </ul>
-        <p id="acceptpolicies_policies_error" class="alert alert-danger{% if not fieldErrors.policies|default %} hidden{% endif %}">
-            {{ fieldErrors.policies|default }}
-        </p>
-    </div>
+    {% if activePolicies.cancellationRightPolicy|default and not acceptedPolicies.cancellationRightPolicy|default %}
+        {% set policyUrl = getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_CANCELLATIONRIGHTPOLICY_URL')) %}
+        {% if policyUrl == '' %}
+            {% set policyUrl = path('zikulalegalmodule_user_cancellationrightpolicy') %}
+        {% endif %}
+        {% set policyName = __('Cancellation right policy', 'zikulalegalmodule') %}
+        <li><a class="policy-link" data-toggle="modal" data-target="#modal-cancellation-right-policy" href="{{ policyUrl }}">{{ policyName }}</a></li>
+    {% endif %}
+    </ul>
 </div>
 <div class="modal fade" id="modal-policy" tabindex="-1" role="dialog" aria-labelledby="modal-title-policy" aria-hidden="true">
     <div class="modal-dialog modal-lg">
